--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ function closePopup(){
 }
 
 function startTest(){
-  window.location.href = "boardobjectivetest01.html.html";
+  window.location.href = "boardobjectivetest01.html";
 }
 </script>
 
