--- a/index.html
+++ b/index.html
@@ -8,6 +8,104 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
 <style>
+/* SYLLABUS MODAL */
+#syllabusOverlay{
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,0.6);
+  display:none;
+  align-items:center;
+  justify-content:center;
+  z-index:10000;
+}
+
+#syllabusModal{
+  background:#fff;
+  width:90%;
+  max-width:520px;
+  border-radius:16px;
+  padding:30px;
+  box-shadow:0 20px 40px rgba(0,0,0,0.25);
+  animation:scaleIn 0.3s ease;
+}
+
+@keyframes scaleIn{
+  from{transform:scale(0.85);opacity:0}
+  to{transform:scale(1);opacity:1}
+}
+
+.syllabus-title{
+  font-size:22px;
+  font-weight:800;
+  color:#0d6efd;
+  margin-bottom:15px;
+  text-align:center;
+}
+
+.syllabus-section{
+  margin-bottom:16px;
+}
+
+.syllabus-section h4{
+  font-size:16px;
+  color:#20c997;
+  margin-bottom:6px;
+}
+
+.syllabus-section ul{
+  padding-left:20px;
+  color:#333;
+}
+
+.syllabus-section li{
+  margin-bottom:6px;
+}
+
+.close-syllabus{
+  margin-top:20px;
+  width:100%;
+  padding:12px;
+  border:none;
+  border-radius:30px;
+  background:#0d6efd;
+  color:#fff;
+  font-weight:700;
+  cursor:pointer;
+}
+
+.close-syllabus:hover{
+  background:#084298;
+}
+
+.test-date{
+  display:inline-block;
+  background:linear-gradient(135deg,#0d6efd,#20c997);
+  color:#fff;
+  padding:6px 14px;
+  border-radius:20px;
+  font-weight:700;
+  font-size:14px;
+  margin-bottom:12px;
+}
+.actions{
+  display:flex;
+  gap:12px;
+  flex-wrap:wrap;
+}
+.syllabus-btn{
+  background:#0d6efd;
+  color:#fff;
+  border:none;
+  padding:14px 26px;
+  font-size:15px;
+  font-weight:700;
+  border-radius:30px;
+  cursor:pointer;
+}
+.syllabus-btn:hover{
+  background:#084298;
+}
+
 :root{
   --primary:#0d6efd;
   --secondary:#20c997;
@@ -202,21 +300,52 @@ main{
 <main>
   <div class="container">
     <div class="test-card">
-      <div class="test-title">Board Objective Test 01</div>
+  <span class="test-date">📅 25/01/26</span>
 
-      <div class="meta">
-        <span><i class="fas fa-question-circle"></i> 24 Questions</span>
-        <span><i class="fas fa-award"></i> 96 Marks</span>
-        <span><i class="fas fa-clock"></i> 60 Minutes</span>
-      </div>
+  <div class="test-title">Board Objective Test 01</div>
 
-      <div class="subjects">
-        <div class="subject">Physics</div>
-        <div class="subject">Chemistry</div>
-        <div class="subject">Maths</div>
-      </div>
+  <div class="meta">
+    <span><i class="fas fa-question-circle"></i> 24 Questions</span>
+    <span><i class="fas fa-award"></i> 96 Marks</span>
+    <span><i class="fas fa-clock"></i> 60 Minutes</span>
+  </div>
 
-      <button class="start-btn" onclick="startTest()">Start Test</button>
+  <div class="subjects">
+    <div class="subject">Physics</div>
+    <div class="subject">Chemistry</div>
+    <div class="subject">Maths</div>
+  </div>
+
+  <div class="actions">
+    <button class="start-btn" onclick="startTest()">Start Test</button>
+    <button class="syllabus-btn" onclick="showSyllabus1()">Syllabus</button>
+  </div>
+</div>
+<div class="test-card" style="margin-top:30px;border-left-color:#20c997">
+  <span class="test-date" style="background:linear-gradient(135deg,#20c997,#0d6efd)">
+    📅 29/01/26
+  </span>
+
+  <div class="test-title">Board Objective Test 02</div>
+
+  <div class="meta">
+    <span><i class="fas fa-question-circle"></i> 60 Questions</span>
+    <span><i class="fas fa-award"></i> 240 Marks</span>
+    <span><i class="fas fa-clock"></i> 180 Minutes</span>
+  </div>
+
+  <div class="subjects">
+    <div class="subject">Maths</div>
+    <div class="subject">SST</div>
+  </div>
+
+  <div class="actions">
+    <button class="start-btn" onclick="startTest2()">Start Test</button>
+    <button class="syllabus-btn" onclick="showSyllabus2()">Syllabus</button>
+  </div>
+</div>
+
+
     </div>
   </div>
 </main>
@@ -229,7 +358,77 @@ function closePopup(){
 function startTest(){
   window.location.href = "boardobjectivetest01.html";
 }
+  function startTest2(){
+  window.location.href = "boardobjectivetest02.html";
+}
+
+function openSyllabus(html){
+  document.getElementById("syllabusContent").innerHTML = html;
+  document.getElementById("syllabusOverlay").style.display = "flex";
+}
+
+function closeSyllabus(){
+  document.getElementById("syllabusOverlay").style.display = "none";
+}
+
+function showSyllabus1(){
+  openSyllabus(`
+    <div class="syllabus-title">Board Objective Test 01 – Syllabus</div>
+
+    <div class="syllabus-section">
+      <h4>📘 Physics</h4>
+      <ul>
+        <li>Light – Reflection & Refraction</li>
+      </ul>
+    </div>
+
+    <div class="syllabus-section">
+      <h4>🧪 Chemistry</h4>
+      <ul>
+        <li>Metals and Non-Metals</li>
+        <li>Carbon and Its Compounds (Basics)</li>
+      </ul>
+    </div>
+
+    <div class="syllabus-section">
+      <h4>📐 Maths</h4>
+      <ul>
+        <li>Real Numbers</li>
+        <li>Arithmetic Progressions</li>
+      </ul>
+    </div>
+  `);
+}
+
+function showSyllabus2(){
+  openSyllabus(`
+    <div class="syllabus-title">Board Objective Test 02 – Syllabus</div>
+
+    <div class="syllabus-section">
+      <h4>📐 Mathematics</h4>
+      <ul>
+        <li>Real Numbers</li>
+        <li>Polynomials (Basics)</li>
+      </ul>
+    </div>
+
+    <div class="syllabus-section">
+      <h4>📚 SST</h4>
+      <ul>
+        <li>History – The Rise of Nationalism in Europe</li>
+      </ul>
+    </div>
+  `);
+}
+
 </script>
+<!-- SYLLABUS MODAL -->
+<div id="syllabusOverlay">
+  <div id="syllabusModal">
+    <div id="syllabusContent"></div>
+    <button class="close-syllabus" onclick="closeSyllabus()">Close</button>
+  </div>
+</div>
 
 </body>
 </html>
